{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 12,
  "lineage": "a7be95be-2132-ab9b-d885-2750be4121cd",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "server-1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:689940171185:subnet/subnet-09c62eb5b83f52d9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c62eb5b83f52d9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "689940171185",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-08a2481133ce5d88f"
          }
        },
        {
          "index_key": "server-2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:689940171185:subnet/subnet-0a7f40501b998e927",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7f40501b998e927",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "689940171185",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-08a2481133ce5d88f"
          }
        },
        {
          "index_key": "server-3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:689940171185:subnet/subnet-0bfae12c671aa7856",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfae12c671aa7856",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "689940171185",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-08a2481133ce5d88f"
          }
        }
      ]
    },
    {
      "module": "module.ec2-instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "server-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007ec828a062d87a5",
            "arn": "arn:aws:ec2:eu-west-2:689940171185:instance/i-05ae7a45beafe4cf2",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05ae7a45beafe4cf2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04d53a7c3031b7f3d",
            "private_dns": "ip-172-31-20-113.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.20.113",
            "public_dns": "ec2-3-10-154-201.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.10.154.201",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-034de8ef2169ce05e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "my_server_sg-dev"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c62eb5b83f52d9b",
            "tags": {
              "Name": "server-1"
            },
            "tags_all": {
              "Name": "server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-016840eebf2891a40"
            ]
          },
          "dependencies": [
            "data.aws_subnet.public_subnet",
            "module.ec2-instances.aws_security_group.my_security_group"
          ]
        },
        {
          "index_key": "server-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007ec828a062d87a5",
            "arn": "arn:aws:ec2:eu-west-2:689940171185:instance/i-069531931ecd6692a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-069531931ecd6692a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-064ac045168e1b881",
            "private_dns": "ip-172-31-34-185.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.34.185",
            "public_dns": "ec2-3-8-82-38.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.82.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cc19975644c40d57",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "my_server_sg-dev"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a7f40501b998e927",
            "tags": {
              "Name": "server-2"
            },
            "tags_all": {
              "Name": "server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-016840eebf2891a40"
            ]
          },
          "dependencies": [
            "data.aws_subnet.public_subnet",
            "module.ec2-instances.aws_security_group.my_security_group"
          ]
        },
        {
          "index_key": "server-3",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007ec828a062d87a5",
            "arn": "arn:aws:ec2:eu-west-2:689940171185:instance/i-0f7698c9eaa8951f6",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f7698c9eaa8951f6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-000bc19c2cba853fc",
            "private_dns": "ip-172-31-12-143.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.12.143",
            "public_dns": "ec2-13-40-49-255.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.40.49.255",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b5da0053777b4afc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "my_server_sg-dev"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bfae12c671aa7856",
            "tags": {
              "Name": "server-3"
            },
            "tags_all": {
              "Name": "server-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-016840eebf2891a40"
            ]
          },
          "dependencies": [
            "data.aws_subnet.public_subnet",
            "module.ec2-instances.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:689940171185:security-group/sg-016840eebf2891a40",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-016840eebf2891a40",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Acceso al puerto 8080 desde el exterior",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "my_server_sg-dev",
            "name_prefix": "",
            "owner_id": "689940171185",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08a2481133ce5d88f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.loadbalancers",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:689940171185:vpc/vpc-08a2481133ce5d88f",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-083f352bbbe47908a",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-05389540e3a130c46",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08a2481133ce5d88f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ff29b98ba3cdc659",
            "owner_id": "689940171185"
          }
        }
      ]
    },
    {
      "module": "module.loadbalancers",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:689940171185:loadbalancer/app/terraformers-alb-dev/f0fa566878935567",
            "arn_suffix": "app/terraformers-alb-dev/f0fa566878935567",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraformers-alb-dev-1716328742.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:689940171185:loadbalancer/app/terraformers-alb-dev/f0fa566878935567",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraformers-alb-dev",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c78585c260eb7990"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09c62eb5b83f52d9b"
              },
              {
                "subnet_id": "subnet-0a7f40501b998e927"
              },
              {
                "subnet_id": "subnet-0bfae12c671aa7856"
              }
            ],
            "subnets": [
              "subnet-09c62eb5b83f52d9b",
              "subnet-0a7f40501b998e927",
              "subnet-0bfae12c671aa7856"
            ],
            "vpc_id": "vpc-08a2481133ce5d88f",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "data.aws_subnet.public_subnet",
            "module.loadbalancers.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancers",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:689940171185:listener/app/terraformers-alb-dev/f0fa566878935567/3e86a16dd1a725af",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:689940171185:targetgroup/terraform-alb-dev/9e3dd511655f3b97",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:689940171185:listener/app/terraformers-alb-dev/f0fa566878935567/3e86a16dd1a725af",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:689940171185:loadbalancer/app/terraformers-alb-dev/f0fa566878935567",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet.public_subnet",
            "module.loadbalancers.aws_lb.alb",
            "module.loadbalancers.aws_lb_target_group.this",
            "module.loadbalancers.aws_security_group.alb",
            "module.loadbalancers.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancers",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:689940171185:targetgroup/terraform-alb-dev/9e3dd511655f3b97",
            "arn_suffix": "targetgroup/terraform-alb-dev/9e3dd511655f3b97",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:689940171185:targetgroup/terraform-alb-dev/9e3dd511655f3b97",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terraform-alb-dev",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08a2481133ce5d88f"
          },
          "dependencies": [
            "module.loadbalancers.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancers",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:689940171185:targetgroup/terraform-alb-dev/9e3dd511655f3b97-20230805144653503300000005",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:689940171185:targetgroup/terraform-alb-dev/9e3dd511655f3b97",
            "target_id": "i-05ae7a45beafe4cf2"
          },
          "dependencies": [
            "data.aws_subnet.public_subnet",
            "module.ec2-instances.aws_instance.server",
            "module.ec2-instances.aws_security_group.my_security_group",
            "module.loadbalancers.aws_lb_target_group.this",
            "module.loadbalancers.data.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:689940171185:targetgroup/terraform-alb-dev/9e3dd511655f3b97-20230805144653342600000004",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:689940171185:targetgroup/terraform-alb-dev/9e3dd511655f3b97",
            "target_id": "i-069531931ecd6692a"
          },
          "dependencies": [
            "data.aws_subnet.public_subnet",
            "module.ec2-instances.aws_instance.server",
            "module.ec2-instances.aws_security_group.my_security_group",
            "module.loadbalancers.aws_lb_target_group.this",
            "module.loadbalancers.data.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:689940171185:targetgroup/terraform-alb-dev/9e3dd511655f3b97-20230805144653536600000006",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:689940171185:targetgroup/terraform-alb-dev/9e3dd511655f3b97",
            "target_id": "i-0f7698c9eaa8951f6"
          },
          "dependencies": [
            "data.aws_subnet.public_subnet",
            "module.ec2-instances.aws_instance.server",
            "module.ec2-instances.aws_security_group.my_security_group",
            "module.loadbalancers.aws_lb_target_group.this",
            "module.loadbalancers.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancers",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:689940171185:security-group/sg-0c78585c260eb7990",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Acceso al puerto 8080 desde el LB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-0c78585c260eb7990",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Acceso al puerto 80 desde el exterior",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg-dev",
            "name_prefix": "",
            "owner_id": "689940171185",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08a2481133ce5d88f"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}